# DigitalAgentScheduler

./: .gitignore  Dockerfile  Pasted--Archivo-gestion-citas-bot-py-Buenos-d-as-Este-script-configura-un-chatbot-que-puede-gest-1730711827769.txt  _chatbot.py  app.py  appointment_manager.py  appointments.py  chatbot (copy).py  chatbot.py  chatbot2.py  db_init.py  docker-compose.yml  email_utils.py  models.py  package-lock.json  package.json  pyproject.toml  replit_zip_error_log.txt  requirements.txt  test_db.py
booking/: __init__.py  handlers.py  session.py  slots.py  validators.py
static/: site.webmanifest
static/css/: custom.css  style (copy).css  style.css  style.css.map
static/disenyo/: KIT CONSULTING FONTS Y COLORES.txt
static/js/: analytics.js  animations.js  appointment_management.js  appointments.js  chatbot.js  contact-form.js  contacts_management.js  mlops.js  scripts.js  smooth-scroll.js
static/scss/: _mixins.scss  _variables.scss  style.scss
static/scss/abstracts/: _functions.scss  _mixins.scss  _variables.scss
static/scss/base/: _reset.scss  _typography.scss  _utilities.scss
static/scss/components/: _buttons.scss  _cards.scss  _chatbot.scss  _forms.scss
templates/: analytics.html  appointment.html  appointment_management.html  appointment_management_content.html  appointments.html  base.html  citas.html  index.html  mlops.html
templates/email/: appointment_confirmation.html  appointment_reminder.html  contact_confirmation.html  contact_form.html  contact_form_confirmation.html
templates/old/: base.html  index.html
(+5 files in other folders)
