[project]
name = "repl-nix-digitalagentscheduler"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "openai>=1.0.0",
    "psycopg2-binary>=2.9.10",
    "torch>=2.5.0",
    "transformers>=4.46.0",
    "flask-mail>=0.10.0",
    "apscheduler>=3.10.4",
    "sentencepiece",
    "holidays>=0.59",
    "sqlalchemy>=2.0.36",
]
